force-app/main/default/objects/SPD_REV_Level__c/SPD_REV_Level__c.object-meta.xml
<CustomObject>
    <label>SPD REV Level</label>
    <nameField>
        <label>SPD REV Level</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPD REV Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>