force-app/main/default/objects/SPD_REV_Level__c/fields/EstSalesFloor__c.field-meta.xml
<CustomField>
    <fullName>EstSalesFloor__c</fullName>
    <label>Estimated Sales Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>