force-app/main/default/objects/SPD_REV_Level__c/fields/Job_Size__c.field-meta.xml
<CustomField>
    <fullName>Job_Size__c</fullName>
    <label>Job Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>