force-app/main/default/objects/SPD_REV_Level__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>SPD REV Level Name</label>
    <type>AutoNumber</type>
</CustomField>