force-app/main/default/objects/SPD_REV_Level__c/fields/Price_Authorizer__c.field-meta.xml
<CustomField>
    <fullName>Price_Authorizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Authorizer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SPD_REV_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>