force-app/main/default/objects/SPD_REV_Level__c/fields/Price_Authorizer_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Authorizer_Name__c</fullName>
    <formula>Price_Authorizer__r.FirstName +&apos; &apos;+ Price_Authorizer__r.LastName</formula>
    <label>Price Authorizer Name</label>
    <type>Text</type>
</CustomField>