force-app/main/default/objects/SPD_REV_Level__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>SPD REV Levels</relationshipLabel>
    <relationshipName>SPD_REV_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>