force-app/main/default/objects/SPD_REV_Level__c/fields/Quote_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Quote_Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SPD_REV_Levels1</relationshipName>
    <type>Lookup</type>
</CustomField>