force-app/main/default/objects/SPD_REV_Level__c/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <label>Quote Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>