force-app/main/default/objects/SPD_REV_Level__c/fields/spd_auth_dt__c.field-meta.xml
<CustomField>
    <fullName>spd_auth_dt__c</fullName>
    <label>SPD Authorize Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>