force-app/main/default/objects/SPD_REV_Level__c/fields/spd_auth_id__c.field-meta.xml
<CustomField>
    <fullName>spd_auth_id__c</fullName>
    <label>SPD Authorize ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>