force-app/main/default/objects/SPD_REV_Level__c/fields/spd_auth_loc__c.field-meta.xml
<CustomField>
    <fullName>spd_auth_loc__c</fullName>
    <label>SPD Authorize Location</label>
    <length>3</length>
    <type>Text</type>
</CustomField>