force-app/main/default/objects/SPD_REV_Level__c/fields/spd_create_dt__c.field-meta.xml
<CustomField>
    <fullName>spd_create_dt__c</fullName>
    <label>SPD Creation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>