force-app/main/default/objects/SPD_REV_Level__c/fields/spd_create_tm__c.field-meta.xml
<CustomField>
    <fullName>spd_create_tm__c</fullName>
    <label>SPD Creation Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>