force-app/main/default/objects/SPD_REV_Level__c/fields/spd_rev_num__c.field-meta.xml
<CustomField>
    <fullName>spd_rev_num__c</fullName>
    <label>SPD Rev Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>