force-app/main/default/objects/SPD_REV_Level__c/fields/spd_rqst_loc__c.field-meta.xml
<CustomField>
    <fullName>spd_rqst_loc__c</fullName>
    <label>SPD Requestor Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>