force-app/main/default/objects/SPD_REV_Level__c/fields/spd_rqstr_id__c.field-meta.xml
<CustomField>
    <fullName>spd_rqstr_id__c</fullName>
    <label>SPD Requestor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>