force-app/main/default/objects/SPD_REV_Level__c/fields/spd_sbmt_dt__c.field-meta.xml
<CustomField>
    <fullName>spd_sbmt_dt__c</fullName>
    <label>SPD Submit Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>