force-app/main/default/objects/SPD_REV_Level__c/fields/Submitted_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Name__c</fullName>
    <formula>Quote_Submitted_By__r.FirstName +&apos; &apos;+ Quote_Submitted_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted By Name</label>
    <type>Text</type>
</CustomField>