force-app/main/default/objects/SPD_REV_Level__c/fields/Total_Book__c.field-meta.xml
<CustomField>
    <fullName>Total_Book__c</fullName>
    <label>Total Book</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>