force-app/main/default/objects/SPD_REV_Level__c/fields/Total_List__c.field-meta.xml
<CustomField>
    <fullName>Total_List__c</fullName>
    <label>Total List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>