force-app/main/default/objects/SPD_REV_Level__c/fields/Total_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Requested__c</fullName>
    <label>Total Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>