force-app/main/default/objects/SPD_REV_Level__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CurrencyIsoCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>