force-app/main/default/objects/SPD_REV_Level__c/listViews/Test_View.listView-meta.xml
<ListView>
    <fullName>Test_View</fullName>
    <columns>NAME</columns>
    <columns>spd_auth_dt__c</columns>
    <columns>spd_auth_id__c</columns>
    <columns>spd_auth_loc__c</columns>
    <columns>spd_auth_tm__c</columns>
    <columns>Name__c</columns>
    <columns>spd_rev_num__c</columns>
    <columns>spd_sbmt_dt__c</columns>
    <columns>spd_sbmt_tm__c</columns>
    <columns>Total_Book__c</columns>
    <columns>Total_List__c</columns>
    <columns>Total_Requested__c</columns>
    <columns>Price_Authorizer__c</columns>
    <filterScope>Everything</filterScope>
    <label>Test View</label>
</ListView>